--- a/S4NClient/Views/CreateNewAccount.html
+++ b/S4NClient/Views/CreateNewAccount.html
@@ -7,13 +7,13 @@
 </head>
 <body>
 
-	<!-- <div ng-app="">
+	<div ng-app="">
 		<p>Input something in the input box:</p>
 		<p>Name: <input type="text" ng-model="name"></p>
 		<p ng-bind="name"></p>
 		<p>Cool</p>
 
-	</div> -->
+	</div>
 
 </body>
 </html>
