--- a/S4NClient/Views/Home.html
+++ b/S4NClient/Views/Home.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html ng-app="something4Nothing" lang="en">
+<html>
 <head>
     <title>Something 4 Nothing</title>
 </head>
 <body >
-
+f
 
 <a class="icon facebook" href="#"><span class="zocial-facebook"></span></a>
 <a class="icon twitter" href="https://twitter.com/"><span class="zocial-twitter"></span></a>
