--- a/S4NClient/Views/Advertisers.html
+++ b/S4NClient/Views/Advertisers.html
@@ -1,1 +1,15 @@
-Advertisers page
+<!DOCTYPE html>
+<html>
+<head>
+    <meta charset="UTF-8">
+    <title>Advertisers Page</title>
+</head>
+<body>
+<div class="container">
+    <div ui-view>
+        <p>Advertisers page</p>
+    </div>
+</div>
+
+</body>
+</html>
