--- a/S4NClient/Views/ContactUs.html
+++ b/S4NClient/Views/ContactUs.html
@@ -1,1 +1,15 @@
-Contact us
+<!DOCTYPE html>
+<html>
+<head>
+    <meta charset="UTF-8">
+    <title>Contact Us</title>
+</head>
+<body>
+<div class="container">
+    <div ui-view>
+        <p>Contact us</p>
+    </div>
+</div>
+
+</body>
+</html>
