--- a/S4NClient/Views/Faq.html
+++ b/S4NClient/Views/Faq.html
@@ -1,1 +1,15 @@
-FAQ Page
+<!DOCTYPE html>
+<html>
+<head>
+    <meta charset="UTF-8">
+    <title>FAQ</title>
+</head>
+<body>
+<div class="container">
+    <div ui-view>
+        <p>FAQ Page</p>
+    </div>
+</div>
+
+</body>
+</html>
