--- a/S4NClient/Views/Winners.html
+++ b/S4NClient/Views/Winners.html
@@ -1,1 +1,15 @@
-Winner Winner chicken dinner
+<!DOCTYPE html>
+<html>
+<head>
+    <meta charset="UTF-8">
+    <title>Winners</title>
+</head>
+<body>
+<div class="container">
+   <div ui-view>
+        <p>Winner Winner chicken dinner</p>
+   </div>
+</div>
+
+</body>
+</html>
