--- a/S4NClient/Views/AboutUs.html
+++ b/S4NClient/Views/AboutUs.html
@@ -1,1 +1,15 @@
-About us page
+<!DOCTYPE html>
+<html>
+<head>
+    <meta charset="UTF-8">
+    <title>About Us</title>
+</head>
+<body>
+<div class="container">
+    <div ui-view>
+        <p>About Us</p>
+    </div>
+</div>
+
+</body>
+</html>
